Add PHP and version 1

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="author" content="Yash Prajapati" />
         <title>Yash Prajapati</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/Yash_icon.png" />
+        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Custom Google font-->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -41,8 +41,8 @@
                         <div class="col-xxl-5">
                             <!-- Header text content-->
                             <div class="text-center text-xxl-start">
-                                <div class="badge bg-gradient-primary-to-secondary text-white mb-4"><div class="text-uppercase">Design &middot; Web Development </div></div>
-                                <div class="fs-3 fw-light text-muted">I can help your business to</div>
+                                <div class="badge bg-gradient-primary-to-secondary text-white mb-4"><div class="text-uppercase">Programming &middot; Web Development &middot;  Design </div></div>
+                                <!-- <div class="fs-3 fw-light text-muted">I can help your business to</div> -->
                                 <h1 class="display-3 fw-bolder mb-5"><span class="text-gradient d-inline">Get online and grow fast</span></h1>
                                 <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xxl-start mb-3">
                                     <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="resume.html">Resume</a>
@@ -182,11 +182,11 @@
                             <div class="text-center my-5">
                                 <h2 class="display-5 fw-bolder"><span class="text-gradient d-inline">About Me</span></h2>
                                 <p class="lead fw-light mb-4">I'm Yash Prajapati, a dynamic Computer Engineer from Ahmedabad.</p>
-                                <p class="text-muted"> Proficient in Python, web development, and AI, I've created websites, games, and hold Google's Python certification. My active tech event involvement and adaptability reflect my growth-focused mindset. Let's connect and innovate together!</p>
+                                <p class="text-muted"> Proficient in Python, Web development, with knowledge of Django. I've created websites, and hold Google's Python certification. My active involvement and adaptability reflect my growth-focused mindset. Let's connect and innovate together!</p>
                                 <div class="d-flex justify-content-center fs-2 gap-4">
-                                    <a class="text-gradient" href="#!"><i class="bi bi-twitter"></i></a>
-                                    <a class="text-gradient" href="#!"><i class="bi bi-linkedin"></i></a>
-                                    <a class="text-gradient" href="#!"><i class="bi bi-github"></i></a>
+                                    <!-- <a class="text-gradient" href="#!"><i class="bi bi-twitter"></i></a> -->
+                                    <a class="text-gradient" href="https://www.linkedin.com/in/yash-prajapati-557724219/"  target="_blank"><i class="bi bi-linkedin"></i></a>
+                                    <a class="text-gradient" href="https://github.com/Yash-Y09" target="_blank"><i class="bi bi-github"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -198,13 +198,13 @@
         <footer class="bg-white py-4 mt-auto">
             <div class="container px-5">
                 <div class="row align-items-center justify-content-between flex-column flex-sm-row">
-                    <div class="col-auto"><div class="small m-0">Copyright &copy; Your Website 2023</div></div>
+                    <div class="col-auto"><div class="small m-0">Copyright &copy; Yash Resume_2023</div></div>
                     <div class="col-auto">
                         <a class="small" href="#!">Privacy</a>
                         <span class="mx-1">&middot;</span>
                         <a class="small" href="#!">Terms</a>
                         <span class="mx-1">&middot;</span>
-                        <a class="small" href="#!">Contact</a>
+                        <a class="small" href="contact.html">Contact</a>
                     </div>
                 </div>
             </div>
