--- a/resume.html
+++ b/resume.html
@@ -207,23 +207,26 @@
                                             <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">PYTHON
                                             </div>
                                         </div>
+                                        
                                         <div class="col mb-4 mb-md-0">
-                                            <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">HTML/CSS
+                                            <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Django
                                             </div>
                                         </div>
                                         <div class="col">
-                                            <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">
-                                                JavaScript</div>
+                                            <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">HTML/CSS </div>
                                         </div>
                                     </div>
                                     <div class="row row-cols-1 row-cols-md-3">
+                                        <div class="col mb-4 mb-md-0">
+                                            <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">JavaScript
+                                            </div>
+                                        </div>
                                         <div class="col mb-4 mb-md-0">
                                             <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">SQL
                                             </div>
                                         </div>
                                         <div class="col mb-4 mb-md-0">
-                                            <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Git and
-                                                Version Control</div>
+                                            <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Git and Version Control</div>
                                         </div>
                                         <!-- <div class="col"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100"></div></div> -->
                                     </div>
