--- a/contact.html
+++ b/contact.html
@@ -317,6 +317,7 @@
                                     }
                                 );
                                 console.log("Success");
+                                document.getElementById("contactForm").reset();
                             }
                         </script>
                     </div>
