--- a/contact.html
+++ b/contact.html
@@ -192,7 +192,9 @@
                                 </form>
                             </div>
                         </div>
-
+                        <br>
+                        <p class="small"><b>Notice for Android Users:</b> If you are using an Android device and encounter issues while submitting the contact form, please feel free to contact me directly via my email address or phone number provided above. We apologize for any inconvenience.</p>
+                            
                         <script>
                             function validateForm() {
                                 var name = document.getElementById("name").value;
