--- a/resume.html
+++ b/resume.html
@@ -89,7 +89,7 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-8">
-                                    <div> GANDHINAGAR INSTITUTE OF TECHNOLOGY(GTU) <br> Ahmedabad, India <br> <b>GPA
+                                    <div> GANDHINAGAR INSTITUTE OF TECHNOLOGY(GTU) <br> Ahmedabad, India <br> <b>CGPA
                                             : 8.64</b> </div>
                                 </div>
                             </div>
