--- a/resume.html
+++ b/resume.html
@@ -57,7 +57,7 @@
                 <h1 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">Resume</span></h1>
             </div>
             <div class="text-center text-lg-end">
-                <a class="btn btn-primary btn-lg px-4 py-3 me-sm-3 fs-6 fw-bolder" href="assets/Yash's Resume.pdf"
+                <a class="btn btn-primary btn-lg px-4 py-3 me-sm-3 fs-6 fw-bolder" href="assets/Yash Prajapati.pdf"
                     target="_blank">
                     <div class="d-inline-block bi bi-eye me-2"></div>View/Download Resume
                 </a>
