--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         <div class="d-flex justify-content-center mt-5 mt-xxl-0">
                             <div class="profile bg-gradient-primary-to-secondary">
 
-                                <img class="profile-img" src="assets/Yash_no_bg_profile.png" alt="..." />
+                                <img class="profile-img" src="assets/icon_nobg.png" alt="..." />
                                 <div class="dots-1">
                                     <!-- SVG Dots-->
                                     <svg version="1.1" xmlns="http://www.w3.org/2000/svg"
