--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                                 <div class="text-uppercase">Project Management &middot; Data Engineering &middot; Business Analysis &middot; Web Development </div>
                             </div>
                             <!-- <div class="fs-3 fw-light text-muted">I can help your business to</div> -->
-                            <h1 class="display-3 fw-bolder mb-5"><span class="text-gradient d-inline">Join for a journey beyond boundaries and innovation – where expertise and ambition converge to create impactful solutions.</span></h1>
+                            <h1 class="display-3 fs-1 fw-bolder mb-5"><span class="text-gradient d-inline">Join for a journey beyond boundaries and innovation – where expertise and ambition converge to create impactful solutions.</span></h1>
                             <div
                                 class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xxl-start mb-3">
                                 <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder"
